[metadata]
name = photonai_graph
description-file  =  README.md
summary = PHOTON Graph - Graph machine learning with photonai.
author = PHOTON Team
author_email = hahnt@uni-muenster.de
url = https://www.photon-ai.com/
license = MIT
long_description_content_type = text/markdown
project_urls:
    Source Code = https://github.com/wwu-mmll/photonai_graph
    Documentation = https://wwu-mmll.github.io/photonai_graph/
    Bug Tracker = https://github.com/wwu-mmll/photonai_graph/issues
download_url = https://pypi.org/project/photonai_graph/#files
keywords =
    machine learning
    deep learning
    graph convolutional neural networks
    graphs
classifiers =
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research

[files]
package = photonai_graph
